--- a/src/app/item-popup/ItemPopup.m.scss
+++ b/src/app/item-popup/ItemPopup.m.scss
@@ -145,15 +145,13 @@
 }
 
 .sheetClose {
-  padding: 10px;
-  color: black;
-  opacity: 0.7;
-
-  .uncommon &,
-  .rare &,
-  .legendary & {
-    color: var(--theme-text);
-  }
+  padding: 5px 10px;
+  top: -35px;
+  background-color: var(--background-color);
+  color: var(--theme-text);
+  border-radius: 2px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .failureReason {
